--- a/web/html/products/addreview.html
+++ b/web/html/products/addreview.html
@@ -1,5 +1,5 @@
 ﻿<div class="panel panel-default">
-  <div class="panel-heading">List of products</div>
+  <div class="panel-heading">Add review for product</div>
   <div class="panel-body">
     <form novalidate class="form-horizontal"  name="form">
      <div class="form-group">
@@ -28,7 +28,7 @@
     </div>    
     <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
-        <button data-ng-disabled="!canSubmit || form.$invalid || !form.$dirty" data-ng-click="addNewReview()" class="btn btn-default">Add</button>
+        <button data-ng-disabled="form.$invalid || !form.$dirty" data-ng-click="addNewReview()" class="btn btn-default">Add</button>
       </div>
     </div>
   </form>
