--- a/web/html/products/addreview.html
+++ b/web/html/products/addreview.html
@@ -1,4 +1,4 @@
-﻿<div class="panel panel-default">
+<div class="panel panel-default">
   <div class="panel-heading">Add review for product</div>
   <div class="panel-body">
     <form novalidate class="form-horizontal"  name="form">
@@ -7,13 +7,7 @@
         <div class="col-sm-10">
             <label class="control-label font-weight-initial">{{product.Name}}</label>
         </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-sm-2">Email:</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" name="email" data-ng-model="review.Email" placeholder="Enter email">
-        </div>
-    </div>
+    </div>    
     <div class="form-group">
         <label class="control-label col-sm-2">Rating:</label>
         <div class="col-sm-10">          
