--- a/web/html/products/productdetails.html
+++ b/web/html/products/productdetails.html
@@ -1,4 +1,4 @@
-﻿<div class="panel panel-default">
+<div class="panel panel-default">
   <div class="panel-heading">Product Detail</div>
   <div class="panel-body">    
       <div class="row">
