--- a/web/html/products/reviews.html
+++ b/web/html/products/reviews.html
@@ -1,5 +1,5 @@
-﻿    <div class="panel panel-default">
-        <div class="panel-heading">Product Detail</div>
+    <div class="panel panel-default">
+        <div class="panel-heading">List reviews</div>
         Comments Go here
         <div class="media">
           <div class="media-left media-middle">
